# sucket

./: .gitignore  Makefile  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
sucket/: __init__.py  bucket.py
tests/: test_utils.py
