[tool.poetry]
name = "sucket"
version = "0.1.0"
description = "A tool to get all files from an S3 bucket"
authors = ["Axel <sucket@absalon.is>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.11.9"
click = "^7.0"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"
ipdb = "^0.12.3"
pdbpp = "^0.10.2"
ipython = "^7.11.1"
mypy = "^0.761"
mypy-boto3-s3 = "^1.11.9"
flake8 = "^3.7.9"

[tool.poetry.scripts]
sucket = 'sucket:sucket'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
